examples/errors/update_wrong_type/main.lc

function main() {
    let txt = "Hello ";
    txt -= "World"
}
